# lambdaman

./: README.md  lambdaman.cabal  lambdaman.hs  lvtc.scr
